    warnings when building against a recent version.

  + (Microsoft Windows version): Fix corrupted exported movie files.  1.2.27
    changed the movie export code to allow writing to files with non-ASCII
    characters in the names, but the new code failed to open the file in binary
    mode, leading to corrupt output.  Fixes #81, reported by Erin Lynch.

* Fix to build without FFmpeg/libav, broken by changes in 1.2.27.  Reported by
  James Begley.

* The Polish translation is now very close to being complete, thanks to a
  substantial update from Mateusz Golicz.

* Merge catalan translation updates from Adolfo Jayme.

* (Microsoft Windows version): Map LANG_CHINESE to zh_CN not zh so Chinese
  messages get used automatically.

* cavern.tst: Remove random : from after ] - dash ignores the extra character,
  but it causes this test to fail if /bin/sh is a different shell (e.g. bash).

* cavern.tst: Add expected output for more testcases.

* Remove unwanted execute bit from some testcase data.

* Use https for more URLs which support it.

Changes in 1.2.27 (2016-06-06):

* aven:

  + Right click on a survey in the survey tree now gives a pop-up menu
    with "Hide others", which restricts the view to just that survey
    and any subsurveys.  Right click on the root of the survey tree
    gives a menu with "Show all" to undo any restriction in effect.
    (Currently these are implemented by reloading the file and using
    the same machinery as the --survey= command line option, but that will
    probably change in the future).

  + If there's a sub-survey restriction (from the --survey= command line
    option or the new UI described above) it is now shown in brackets after
    the survey tree root.

  + When reloading a survey, preserve the current view position (previously
    the view was recentred).

  + When reloading a survey, actually preserve the current scale factor
    (this was meant to happen, but the adjustment was applied in the
    wrong direction).
