@@ -89,6 +89,12 @@ Changes in 1.2.28 (2016-09-24):
     characters in the names, but the new code failed to open the file in binary
     mode, leading to corrupt output.  Fixes #81, reported by Erin Lynch.
 
+  * (Microsoft Windows version): Pre-built version now uses FFmpeg 3.1.3 for
+    movie export.
+
+  * (Mac OS X version): Pre-built version now uses FFmpeg 3.1.3 for movie
+    export.
+
 * Fix to build without FFmpeg/libav, broken by changes in 1.2.27.  Reported by
   James Begley.
 
